# Algorithms

./: .gitignore  Algorithms.sln  Dockerfile  LICENSE  backlog  backlog.txt  base.cmake  setup
BalancedBinaryTree/: CMakeLists.txt
BalancedBinaryTree/algo/insert_node/: insert_node.h  insert_node.hpp  insert_node_test.cpp
BalancedBinaryTree/algo/regulate_black/: regulate_black.h  regulate_black.hpp  regulate_black_test.cpp
BalancedBinaryTree/algo/regulate_red/: regulate_red.h  regulate_red.hpp  regulate_red_test.cpp
BalancedBinaryTree/algo/remove_node/: remove_node.h  remove_node.hpp  remove_node_test.cpp
BalancedBinaryTree/algorithm/consecutive_red_regulator/: consecutive_red_regulator.h  consecutive_red_regulator.hpp  consecutive_red_regulator_test.cpp
BalancedBinaryTree/algorithm/dual_black_regulator/: dual_black_regulator.h  dual_black_regulator.hpp  dual_black_regulator_test.cpp
BalancedBinaryTree/algorithm/node_inserter/: node_inserter.h  node_inserter.hpp  (+1 more)
BalancedBinaryTree/generic/: error_type.hpp  key_type.hpp
BalancedBinaryTree/rb_node/: rb_node.h  rb_node.hpp  rb_node_test.cpp
BalancedBinaryTree/rb_tree/: rb_tree.h  rb_tree.hpp  rb_tree_test.cpp  tree_visitor_i.hpp
FFT/: FFT.vcxproj  (+12 more)
SortAlgorithm/: CMakeLists.txt  SortAlgorithm.vcxproj  SortAlgorithm.vcxproj.filters  heap.h  heap.hpp  heap_sort.h  heap_sort.hpp  heap_test.cpp  heapsort_test.cpp  partitioner.h  partitioner.hpp  partitioner_test.cpp  quick_sort.h  quick_sort.hpp  quick_sort_test.cpp  quick_sorter.hpp  support.hpp
SortAlgorithm/quicksort/: quicksort.hpp  quicksort_test.cpp
(+249 files in other folders)
